<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/homeLogoImg"
        android:layout_width="301dp"
        android:layout_height="119dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logoContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_escale" />

    <ImageButton
        android:id="@+id/homeButtonStarter"
        android:layout_width="345dp"
        android:layout_height="110dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/contentDescriptionStarter"
        app:layout_constraintBottom_toTopOf="@+id/textViewMainCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/entrees" />

    <ImageButton
        android:id="@+id/homeButtonMainDish"
        android:layout_width="345dp"
        android:layout_height="110dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/contentDescriptionMainDish"
        app:layout_constraintBottom_toTopOf="@+id/textViewDesserts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plat" />

    <ImageButton
        android:id="@+id/homeButtonDessert"
        android:layout_width="345dp"
        android:layout_height="110dp"
        android:layout_marginBottom="116dp"
        android:contentDescription="@string/contentDescriptionDessert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dessert" />

    <TextView
        android:id="@+id/textViewstarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starter"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/homeButtonStarter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewMainCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainDish"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/homeButtonMainDish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewDesserts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/dessert"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/homeButtonDessert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
